--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
           <img src="./static/images/custom.jpg" alt="Custom Clearance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Custom Clearance</h3>
+          <h3 class="text-lg font-semibold mb-2">Customs Clearance</h3>
           <p class="text-gray-600 text-sm mb-4">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
           <button onclick="openModal('modal1')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
@@ -144,7 +144,7 @@
           <img src="./static/images/transportation.jpg" alt="Transportation" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
         </div>
         <div class="p-6 text-left">
-          <h3 class="text-lg font-semibold mb-2">Transportation</h3>
+          <h3 class="text-lg font-semibold mb-2">Multimodal Transportation</h3>
           <p class="text-gray-600 text-sm mb-4">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
           <button onclick="openModal('modal2')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
         </div>
@@ -214,7 +214,7 @@
     <img src="./static/images/consulting.jpg" alt="Custom Consultation" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
   </div>
   <div class="p-6 text-left">
-    <h3 class="text-lg font-semibold mb-2">Custom Consultation</h3>
+    <h3 class="text-lg font-semibold mb-2">Customs Consultation</h3>
     <p class="text-gray-600 text-sm mb-4">
   Tailored logistics advice to solve your unique challenges, streamline operations and enhance efficiency.
 </p>
@@ -239,11 +239,11 @@
 
 <div class="bg-white rounded-lg overflow-hidden group">
   <div class="overflow-hidden">
-    <img src="./static/images/duty.jpg" alt="Dutyback Clearance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
+    <img src="./static/images/duty.jpg" alt="Duty drawback clearance" class="w-full h-48 object-cover transform group-hover:scale-110 transition duration-300">
   </div>
   <div class="p-6 text-left">
-    <h3 class="text-lg font-semibold mb-2">Dutyback Clearance</h3>
-    <p class="text-gray-600 text-sm mb-4">We handle dutyback clearance efficiently—managing refund processes for previously paid duties on qualified exports.</p>
+    <h3 class="text-lg font-semibold mb-2">Duty drawback clearance</h3>
+    <p class="text-gray-600 text-sm mb-4">We handle Duty drawback clearance efficiently—managing refund processes for previously paid duties on qualified exports.</p>
     <button onclick="openModal('modal10')" class="btn-readmore hover-slide-left bg-accent text-white px-4 py-2 rounded hover:brightness-110">Read More</button>
   </div>
 </div>
@@ -261,7 +261,7 @@
 
   <div id="modal1" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
     <div class="bg-white p-8 rounded w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Custom Clearance</h2>
+      <h2 class="text-2xl font-bold mb-4">Customs Clearance</h2>
       <p class="text-gray-700 text-sm mb-4">We simplify customs procedures and manage documentation to clear your cargo smoothly through borders.</p>
       <button onclick="closeModal('modal1')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
@@ -269,7 +269,7 @@
 
   <div id="modal2" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
     <div class="bg-white p-8 rounded w-full max-w-md">
-      <h2 class="text-2xl font-bold mb-4">Transportation</h2>
+      <h2 class="text-2xl font-bold mb-4">Multimodal Transportation</h2>
       <p class="text-gray-700 text-sm mb-4">From road to rail, our transportation services guarantee timely and secure movement of your cargo.</p>
       <button onclick="closeModal('modal2')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
     </div>
@@ -323,7 +323,7 @@
 <!-- Modal: Consulting -->
 <div id="modal8" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
   <div class="bg-white p-8 rounded w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-4">Custom Consultation</h2>
+    <h2 class="text-2xl font-bold mb-4">CustomS Consultation</h2>
     <p class="text-gray-700 text-sm mb-4">
       Our custom consultation services are crafted to suit your logistics goals. From analyzing workflows to creating smart strategies, we provide expert advice to help you reduce costs, improve operations, and scale confidently.
     </p>
@@ -347,9 +347,9 @@
 
 <div id="modal10" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
   <div class="bg-white p-8 rounded w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-4">Dutyback Clearance</h2>
+    <h2 class="text-2xl font-bold mb-4">Duty drawback clearance</h2>
     <p class="text-gray-700 text-sm mb-4">
-      We handle Dutyback Clearance services with precision—ensuring accurate documentation, smooth processing, and timely refunds of duties paid on imported goods as per applicable policies.
+      We handle Duty drawback clearance services with precision—ensuring accurate documentation, smooth processing, and timely refunds of duties paid on imported goods as per applicable policies.
     </p>
     <button onclick="closeModal('modal10')" class="mt-4 bg-[#005EB8] text-white px-4 py-2 rounded">Close</button>
   </div>
@@ -408,11 +408,11 @@
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
+    <i class="fas fa-angle-right mr-2"></i>Customs Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Transportation
+    <i class="fas fa-angle-right mr-2"></i>Multimodal Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
@@ -432,24 +432,25 @@
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <i class="fas fa-angle-right mr-2"></i>Customs Consultation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
-  <li class="relative group">
+  <!-- <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
-  </li>
+  </li> -->
 </ul>
 
     </div>
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments<br>
+        Panampilly Nagar <br> Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
   <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
