--- a/services2.html
+++ b/services2.html
@@ -131,7 +131,7 @@
         <img src="./static/images/custom.jpg" alt="Custom Clearance" class="rounded-lg shadow-lg w-full h-auto" />
       </div>
       <div class="md:col-span-8 bg-[#005EB8] text-white p-10 rounded-lg clip-polygon-right text-left">
-        <h3 class="text-3xl font-semibold mb-4">Custom Clearance</h3>
+        <h3 class="text-3xl font-semibold mb-4">Customs Clearance</h3>
         <p class="text-sm mb-4 leading-relaxed">We manage all customs procedures, ensuring fast and hassle-free import/export clearance at global borders.</p>
         <p class="text-sm leading-relaxed">Our team simplifies documentation and legal formalities for smooth cross-border logistics operations.</p>
       </div>
@@ -140,7 +140,7 @@
     <!-- Transportation -->
     <div class="grid md:grid-cols-12 gap-8 mb-20 items-center">
       <div class="md:col-span-8 bg-[#005EB8] text-white px-12 py-10 pl-16 rounded-lg clip-polygon-left text-left order-2 md:order-1">
-        <h3 class="text-3xl font-semibold mb-4">Transportation</h3>
+        <h3 class="text-3xl font-semibold mb-4">Multimodal Transportation</h3>
         <p class="text-sm mb-4 leading-relaxed">Efficient and secure inland transportation services to deliver cargo swiftly across domestic and cross-border locations.</p>
         <p class="text-sm leading-relaxed">We offer door-to-door logistics, tracking, and route optimization for every delivery need.</p>
       </div>
@@ -238,11 +238,11 @@
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
+    <i class="fas fa-angle-right mr-2"></i>Customs Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Transportation
+    <i class="fas fa-angle-right mr-2"></i>Multimodal Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
@@ -262,35 +262,35 @@
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <i class="fas fa-angle-right mr-2"></i>Customs Consultation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
-  <li class="relative group">
+  <!-- <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
-  </li>
+  </li> -->
 </ul>
 
     </div>
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments<br>
+        Panampilly Nagar <br> Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
   <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
   <span class="inline-block min-w-[45px]"></span> + 484-232-0046
 </p>
 
-      <p class="mt-2">
+<p class="mt-2">
   <span>Email: info@evslogistics.in</span><br>
   <span style="display: inline-block; margin-left: 5ch;">Docs@evslogistics.in</span>
 </p>
-
     </div>
   </div>
 
