--- a/index.html
+++ b/index.html
@@ -495,11 +495,11 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
       <h3 class="font-semibold text-lg mb-3">Our Services</h3>
       <ul class="space-y-2">
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Clearance
+    <i class="fas fa-angle-right mr-2"></i>Customs Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Reliable Delivery</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Transportation
+    <i class="fas fa-angle-right mr-2"></i>Multimodal Transportation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Global Trade Help</span>
   </li>
   <li class="relative group">
@@ -519,24 +519,25 @@ Comprehensive logistics for all kinds of products — delivered safely, every ti
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
-    <i class="fas fa-angle-right mr-2"></i>Custom Consultation
+    <i class="fas fa-angle-right mr-2"></i>Customs Consultation
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
   <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Relocation Services
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
   </li>
-  <li class="relative group">
+  <!-- <li class="relative group">
     <i class="fas fa-angle-right mr-2"></i>Dutyback Clearance
     <span class="absolute left-6 -top-6 opacity-0 group-hover:opacity-100 transition-opacity bg-white text-[#005EB8] text-xs px-2 py-1 rounded shadow-md z-10">Your Goods Secured</span>
-  </li>
+  </li> -->
 </ul>
 
     </div>
 
     <div>
       <h3 class="font-semibold text-lg mb-3">Contact Info</h3>
-      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments <br> Kochi , Kerala</p>
+      <p>Door No.60/17/A-5 Peter's Enclave, <br>opp.Kairali Apartments<br>
+        Panampilly Nagar <br> Kochi , Kerala</p>
       <p class="mt-2">
   <span class="inline-block min-w-[45px] font-semibold">Phone:</span> +91 8129033332<br>
   <span class="inline-block min-w-[45px]"></span> +91 8589961888<br>
